--- a/src/app/components/shared/modals/modal-nuevo-producto/modal-nuevo-producto.component.css
+++ b/src/app/components/shared/modals/modal-nuevo-producto/modal-nuevo-producto.component.css
@@ -7,3 +7,14 @@
 .blue {
     color: rgb(76, 73, 255);
 }
+
+.thumbnail {
+    width: 100%;
+    height: 25vw;
+    object-fit: cover;
+}
+
+.thumbnail img {
+    max-height: 100%;
+    max-width: 100%;  
+}
